Change of the first 4 blocks HP

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -1,110 +1,296 @@
-<!-- Jumbotron -->
+<!-- Full screen --> 
 
-<div>
-    <div class="jumbotron text-center">
-        </br>
-        </br>
-        </br>
-        </br>
-        <h2 class="text-primary titre1">Optimisez la satisfaction de vos clients en quelques clics</h2>
-        <a style="padding: auto;" class="btn btn-primary" href="/static/index_our_services">Our services</a>
-
-  </div>
-   </div>
-
-
-<!-- Entreprises qui nous ont trust --> 
-
-<div>
-  <h1 class="text-warning text-center font-weight-bold mt-md" style="font-size: 80px;">They gave us their trust</h1>
-</div>
-
-
-<br><br><br><br><br><br><br><br><br><br>
-
-  <section class="section section-lg pt-lg-0 mt--200">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="row row-grid">
-              <div class="col-lg-4">
-                <div class="card card-lift--hover shadow border-0">
-                  <div class="card-body py-5">
-                    <img src="https://media.licdn.com/dms/image/C4D03AQGUX-EIxsDnhQ/profile-displayphoto-shrink_800_800/0?e=1580947200&v=beta&t=QY48m4y36JN1Ay78KA22GEYRmLc3t_1NTW1ib1udokg" class="rounded mx-auto d-block img-fluid">            
-                    <h6 class="text-primary text-uppercase">Jean-Michel Consulting</h6>
-                    <p class="description mt-3 font-italic">"It's my direction, I broke the plombs, never gave up... Thanks to <b> Satis'faction</b> !" - Arthur Pillon</p>
-                    <div>
-                      <span class="badge badge-pill badge-primary">sexion</span>
-                      <span class="badge badge-pill badge-primary">assault</span>
-                      <span class="badge badge-pill badge-primary">pouloulou</span>
-                    </div>
-                    <a href="#" class="btn btn-primary mt-4">Visit website</a>
-                  </div>
+      <section class="section section-lg section-shaped pb-200">
+        <div class="shape shape-style-1 shape-default">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <div class="container py-lg-md d-flex">
+          <div class="col px-0">
+            <div class="row">
+              <div class="col-lg-6">
+                <h1 class="display-3  text-white">Take the pulse<span>of your customers</span></h1>
+                <p class="lead  text-white">Thanks to Satis'faction, you'll be able to follow the happiness of your customers and thus be able to retain them.</p>
+                <div class="btn-wrapper">
+                  <%= link_to '<i class="fas fa-paper-plane"></i>  Contact us'.html_safe, '/#anchor', class:'btn btn-info btn-icon mb-3 mb-sm-0' %>
+                  <%= link_to "Discover our services","/#anchor", class:'btn btn-white btn-icon mb-3 mb-sm-0' %>
                 </div>
               </div>
-              <div class="col-lg-4">
-                <div class="card card-lift--hover shadow border-0">
-                  <div class="card-body py-5">
-                    <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/61828360_10214935214716073_7021585953395310592_n.jpg?_nc_cat=107&_nc_ohc=Vxwk_qOVFPUAQkUJJN7_LR7YGqEJ7XvZMVVoRyw60SZBPJHOUpuO6rEqw&_nc_ht=scontent-cdg2-1.xx&oh=08e1c7032cf0d7722f58131e622987fa&oe=5E7310D0"  class="rounded mx-auto d-block img-fluid">            
-                    <h6 class="text-danger text-uppercase">AMAZON</h6>
-                    <p class="description mt-3 font-italic">"Thanks to <b>Satis'faction </b> our customers stopped running away and now I can chill every day..." - Martin Dupont</p>
-                    <div>
-                      <span class="badge badge-pill badge-danger">accuracy</span>
-                      <span class="badge badge-pill badge-danger">vision</span>
-                      <span class="badge badge-pill badge-danger">success</span>
+              <div class="col-lg-6 mb-lg-auto">
+                <div class="rounded shadow-lg overflow-hidden transform-perspective-right">
+                  <div id="carousel_example" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel_example" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel_example" data-slide-to="1"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="img-fluid" src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="img-fluid" src="https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1955&q=80" alt="Second slide">
+                      </div>
                     </div>
-                    <a href="#" class="btn btn-danger mt-4">Visit website</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="card card-lift--hover shadow border-0">
-                  <div class="card-body py-5">
-                    <img src="https://media.licdn.com/dms/image/C4D03AQHbx04ZaS_RIg/profile-displayphoto-shrink_800_800/0?e=1580947200&v=beta&t=UQlF2G0opsGS9nt-khWXpO0bmXp08uMC66H13WVV9fM" class="rounded mx-auto d-block img-fluid">
-                    <h6 class="text-info text-uppercase">Nasa</h6>
-                    <p class="description mt-3 font-italic"> "<b>Satis'Faction</b> made us know how much states like our rockets. I recommend their solution!" - Augustin Fuzay</p>
-                    <div>
-                      <span class="badge badge-pill badge-info">quality</span>
-                      <span class="badge badge-pill badge-info">reliability</span>
-                      <span class="badge badge-pill badge-info">seriousness</span>
-                    </div>
-                    <a href="#" class="btn btn-info mt-4">Visit website</a>
+                    <a class="carousel-control-prev" href="#carousel_example" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel_example" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <!-- SVG separator -->
+        <div class="separator separator-bottom separator-skew">
+          <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+          </svg>
+        </div>
+      </section>
+    </div>
+ 
+
+
+
+<!-- Our services -->
+
+<section class="section section-lg">
+  <div class="container">
+    <div class="row row-grid align-items-center">
+      <div class="col-md-6 order-md-2">
+        <img src="https://demos.creative-tim.com/argon-design-system/assets/img/theme/promo-1.png" class="img-fluid floating">
       </div>
-    </section>
+      <div class="col-md-6 order-md-1">
+        <div class="pr-md-5">
+          <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5">
+            <i class="fas fa-heartbeat"></i>
+          </div>
+          <h3> How does Satis'faction work? </h3>
+          <p>It is so easy, you will be able to listen to your customers, know what they think of you and thus improve your relationship with them in a few steps </p>
+          <ul class="list-unstyled mt-5">
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-user-tie"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0"> Create an account ! </h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-paste"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0"> Create a survey ! </h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-paper-plane"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0">Send the survey to your clients  !</h6>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="fas fa-chart-pie"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0"> Check your results in a customized dashboard ! </h6>
+                </div>
+              </div>
+            </li>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Modern interface -->
+
+<section class="section pb-0 bg-gradient-warning">
+  <div class="container">
+    <div class="row row-grid align-items-center">
+      <div class="col-md-6 order-lg-2 ml-lg-auto">
+        <div class="position-relative pl-md-5">
+          <img src="https://demos.creative-tim.com/argon-design-system/assets/img/ill/ill-2.svg" class="img-center img-fluid">
+        </div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="d-flex px-3">
+          <div>
+            <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+              <i class="fab fa-modx"></i>
+            </div>
+          </div>
+          <div class="pl-4">
+            <h4 class="display-3 text-white">Modern Interface</h4>
+            <p class="text-white">Our modern interface makes it easy to use our features. You'll save a precious time by using Satis'faction !</p>
+          </div>
+        </div>
+        <div class="card shadow shadow-lg--hover mt-5">
+          <div class="card-body">
+            <div class="d-flex px-3">
+              <div>
+                <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
+                  <i class="fas fa-phone-alt"></i>
+                </div>
+              </div>
+              <div class="pl-4">
+                <h5 class="title text-success">Awesome Support</h5>
+                <p>Once client of our solution, you'll be in contact with a Customer Success Manager that you can call whenever you want!</p>
+                <span class="text-success">#support</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card shadow shadow-lg--hover mt-5">
+          <div class="card-body">
+            <div class="d-flex px-3">
+              <div>
+                <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
+                  <i class="fas fa-layer-group"></i>
+                </div>
+              </div>
+              <div class="pl-4">
+                <h5 class="title text-warning">New features </h5>
+                <p>Our awesome developers team is constantly building new features to make your life easier. You'll be granted those additional features with no additional costs.</p>
+                <span class="text-warning">#evolution</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- SVG separator -->
+  <div class="separator separator-bottom separator-skew zindex-100">
+    <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+    </svg>
+  </div>
+</section>
 
 
-<!-- Why giving us your trust --> 
+<!-- Our amazing team -->
 
-<hr>
-<div>
-  <h1 class="text-info text-center font-weight-bold mt-md" style="font-size: 80px;">Why giving us your trust?</h1>
-</div>
-<br><br>
-
-<div class="row">
-  <div class="text-info col-lg-4">
-    <p class="text-center text_sucess"><i class="fas fa-chart-line fa-7x"></i></p>
-    <h2><p class="text-center text-danger">Expertise</p></h2>
-    <p class="text-center">Experience, ca fait des années, blablabla...</p>
-  </div><!-- /.col-lg-4 -->
-  <div class="text-info col-lg-4">
-    <p class="text-center"><i class="fas fa-syringe fa-7x"></i></p>
-    <h2><p class="text-center text-danger">Efficiency</p></h2>
-    <p class="text-center">Resultats rapides, faciles à exploiter, blablabla...</p>
-  </div><!-- /.col-lg-4 -->
-  <div class="text-info col-lg-4">
-    <p class="text-center"><i class="fas fa-piggy-bank fa-7x"></i></p>
-    <h2><p class="text-center text-danger">Profitability</p></h2>
-    <p class="text-center">Vous allez vous en mettre plein les fouilles bande de veinards (filez un billet au passage ;)</p>
-  </div><!-- /.col-lg-4 -->
-</div>
-
+<section class="section section-lg">
+  <div class="container">
+    <div class="row justify-content-center text-center mb-lg">
+      <div class="col-lg-8">
+        <h2 class="display-3">The amazing Team</h2>
+        <p class="lead text-muted">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record maximum.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNU6XT54L-655b5ead2e85-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <div class="pt-4 text-center">
+            <h5 class="title">
+              <span class="d-block mb-1">Sacha Tordjman</span>
+              <small class="h6 text-muted">Web Developer</small>
+            </h5>
+            <div class="mt-3">
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, 'https://www.linkedin.com/in/sachatordjman/', class:'btn btn-warning btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, 'https://github.com/sacha-oz/', class:'btn btn-warning btn-icon-only rounded-circle' %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA2PP-64e10b10ab5b-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <div class="pt-4 text-center">
+            <h5 class="title">
+              <span class="d-block mb-1">Tanguy Billon</span>
+              <small class="h6 text-muted">Web Developer</small>
+            </h5>
+            <div class="mt-3">
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-primary btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-primary btn-icon-only rounded-circle' %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN877SSD-ab750300fff8-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <div class="pt-4 text-center">
+            <h5 class="title">
+              <span class="d-block mb-1">Julien Ribeaucourt</span>
+              <small class="h6 text-muted">Web Developer</small>
+            </h5>
+            <div class="mt-3">
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-info btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-info btn-icon-only rounded-circle' %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN87EX5X-acf9c0d8e3da-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <div class="pt-4 text-center">
+            <h5 class="title">
+              <span class="d-block mb-1">Augustin Bernard</span>
+              <small class="h6 text-muted">Web developer</small>
+            </h5>
+            <div class="mt-3">
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-success btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-success btn-icon-only rounded-circle' %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA5UM-fe6009f3bb78-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <div class="pt-4 text-center">
+            <h5 class="title">
+              <span class="d-block mb-1">Baptiste Geffroy</span>
+              <small class="h6 text-muted">Web Developer</small>
+            </h5>
+            <div class="mt-3">
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-danger btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-danger btn-icon-only rounded-circle' %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 
  
