--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -1,3 +1,9 @@
+<!-- Call for the partial navbar dedicated to the homepage -->
+
+ <% content_for :navbar do %>
+      <%= render 'navbar_hp' %>
+ <% end %>
+
 <!-- Full screen --> 
 
       <section class="section section-lg section-shaped pb-200">
@@ -19,8 +25,8 @@
                 <h1 class="display-3  text-white">Take the pulse<span>of your customers</span></h1>
                 <p class="lead  text-white">Thanks to Satis'faction, you'll be able to follow the happiness of your customers and thus be able to retain them.</p>
                 <div class="btn-wrapper">
-                  <%= link_to '<i class="fas fa-paper-plane"></i>  Contact us'.html_safe, '/#anchor', class:'btn btn-info btn-icon mb-3 mb-sm-0' %>
-                  <%= link_to "Discover our services","/#anchor", class:'btn btn-white btn-icon mb-3 mb-sm-0' %>
+                  <%= link_to '<i class="fas fa-paper-plane"></i>  Contact us'.html_safe, new_contact_path , class:'btn btn-info btn-icon mb-3 mb-sm-0' %>
+                  <%= link_to "Discover our services","/#the_solution", class:'btn btn-white btn-icon mb-3 mb-sm-0' %>
                 </div>
               </div>
               <div class="col-lg-6 mb-lg-auto">
@@ -66,7 +72,7 @@
 
 <!-- Our services -->
 
-<section class="section section-lg">
+<section id="the_solution" class="section section-lg">
   <div class="container">
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-md-2">
@@ -167,7 +173,7 @@
                 </div>
               </div>
               <div class="pl-4">
-                <h5 class="title text-success">Awesome Support</h5>
+                <h5 class="title text-success">Awesome support</h5>
                 <p>Once client of our solution, you'll be in contact with a Customer Success Manager that you can call whenever you want!</p>
                 <span class="text-success">#support</span>
               </div>
@@ -204,12 +210,12 @@
 
 <!-- Our amazing team -->
 
-<section class="section section-lg">
+<section id="the_team" class="section section-lg">
   <div class="container">
     <div class="row justify-content-center text-center mb-lg">
       <div class="col-lg-8">
         <h2 class="display-3">The amazing Team</h2>
-        <p class="lead text-muted">According to the National Oceanic and Atmospheric Administration, Ted, Scambos, NSIDClead scentist, puts the potentially record maximum.</p>
+        <p class="lead text-muted">Here you'll discover the people you'll work with tomorrow ! </p>
       </div>
     </div>
     <div class="row">
@@ -284,6 +290,72 @@
             <div class="mt-3">
               <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-danger btn-icon-only rounded-circle' %>
               <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-danger btn-icon-only rounded-circle' %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Contact us -->
+
+
+  <div class="container">
+    <div class="card bg-gradient-warning shadow-lg border-0">
+      <div class="p-5">
+        <div class="row align-items-center">
+          <div class="col-lg-8">
+            <h3 class="text-white">We made this solution for your company</h3>
+            <p class="lead text-white mt-3">Take contact with one of our adviser to discuss how our solution could suit you.</p>
+          </div>
+          <div class="col-lg-3 ml-lg-auto">
+            <%= link_to '<i class="fas fa-paper-plane"></i>  Contact us'.html_safe, new_contact_path, class:'btn btn-lg btn-block btn-white' %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+<!-- References -->
+
+<section class="section">
+  <div class="container">
+    <div class="row row-grid justify-content-center">
+      <div class="col-lg-8 text-center">
+        <div class="text-center">
+          <h4 class="display-4 mb-5 mt-5">These companies use our solution</h4>
+          <div class="row justify-content-center">
+            <div class="col-lg-2 col-4">
+              <a href="https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Bootstrap 4 - Most popular front-end component library">
+                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/bootstrap.jpg" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-lg-2 col-4">
+              <a href=" https://www.creative-tim.com/product/vue-argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Vue.js - The progressive javascript framework">
+                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/vue.jpg" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-lg-2 col-4">
+              <a href=" https://www.creative-tim.com/product/argon-design-system-angular" target="_blank" data-toggle="tooltip" data-original-title="Angular - One framework. Mobile &amp; desktop">
+                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-lg-2 col-4">
+              <a href=" https://www.creative-tim.com/product/argon-design-system-react" target="_blank" data-toggle="tooltip" data-original-title="React - A JavaScript library for building user interfaces">
+                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-lg-2 col-4">
+              <a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Sketch - Digital design toolkit">
+                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg" class="img-fluid">
+              </a>
+            </div>
+            <div class="col-lg-2 col-4">
+              <a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Adobe Photoshop - Software for digital images manipulation">
+                <img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg" class="img-fluid">
+              </a>
             </div>
           </div>
         </div>
