--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,13 +105,13 @@
 					<div class="col-md-6">
 						<ul class="nav nav-footer justify-content-end">
 							<li class="nav-item">
-								<%= link_to "About Us", static_index_about_us_path, class: "nav-link" %>
+								<%= link_to "About Us", "/#the_team" , class: "nav-link" %>
 							</li>
 							<li class="nav-item">
-								<%= link_to "Our services", static_index_our_services_path, class: "nav-link" %>
+								<%= link_to "Our services", "/#the_solution" , class: "nav-link" %>
 							</li>
 							<li class="nav-item">
-								<%= link_to "Contact_us", static_index_contact_us_path, class: "nav-link" %>
+								<%= link_to "Contact_us", new_contact_path, class: "nav-link" %>
 							</li>
 						</ul>
 					</div>
@@ -123,7 +123,6 @@
 	</body>
 </html>
 
-				
 				
 				
 
