--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2996,7 +2996,7 @@ textarea.form-control
 
     display: inline-block;
 
-    padding: 1.25rem 1.25rem;
+    padding: 0.75rem 1.25rem;
 
     -webkit-user-select: none;
        -moz-user-select: none;
@@ -6567,16 +6567,11 @@ a.badge:focus
     background-color: black;
 }
 
-.bodybg
-{
-    background-color: rgb(242, 242, 242);
-}
-
 .jumbotron
 {
     margin-bottom: 2rem;
     padding: 2rem 1rem;
-
+    background-size: cover;
     background-color: #169e1fa4;
     height: 600px;
     background-image: url("https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
