--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<head>
 		<!-- Favicon -->
 		<link href="assets/images/brand/favicon.png" rel="icon" type="image/png">
 		<!-- Icons -->
@@ -19,41 +20,61 @@
 		<%= javascript_pack_tag  'application', 'data-turbolinks-track': 'reload' %>
 	</head>
 
-	<body class="bodybg">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-default">
-			
-			<div id="narvbar_left">
-				<a class="navbar-brand" href="/">Satisfact°</a>
-				<%= link_to "Our services", static_index_our_services_path, class: "nav-link" %>
-				<%= link_to "About Us", static_index_about_us_path, class: "nav-link" %>
-				<%= link_to "Contact Us", new_contact_path, class: "nav-link" %>
-			</div>
-			
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>	
-			
-			<div class="collapse navbar-collapse" id="navbar-default">
-				<div class="navbar-collapse-header">
-					<div class="row">
-						<div class="col-6 collapse-brand"></div>
-							<div class="col-6 collapse-close">
-								<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-								</button>
-							</div>
-					</div>
-				</div>
 
-				<ul class="navbar-nav ml-lg-auto">
-					<% if user_signed_in? %>
-						<a style="padding: auto;" class="btn btn-success" href="/surveys/new">Create a survey</a>
-					<% end %>
+
+
+	
+	<body>
+	
+
+		<header class="header-global">
+		<nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom">
+		  <div class="container nav-item">
+		  <a class="navbar-brand" href="/">Satisfact°</a>
+		  <%= link_to "Our services", static_index_our_services_path, class: "nav-link" %>
+		  <%= link_to "About Us", static_index_about_us_path, class: "nav-link" %>
+		  <%= link_to "Contact Us", new_contact_path, class: "nav-link" %>
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="navbar-collapse collapse" id="navbar_global">
+			  <div class="navbar-collapse-header">
+				<div class="row">
+				  <div class="col-6 collapse-close">
+					<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
+					  <span></span>
+					  <span></span>
+					</button>
+				  </div>
+				</div>
+			  </div>
+
+			  
+			  <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+				<% if user_signed_in? %>
+				<li class="nav-item d-none d-lg-block ml-lg-4">
+				  <a href="/surveys/new" class="btn btn-neutral btn-icon text-default">
+					<span class="btn-inner--icon">
+					  <i class="fa fa-pen mr-2"></i>
+					</span>
+					<span class="nav-link-inner--text">Create a survey</span>
+				  </a>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link nav-link-icon" href="https://www.youtube.com/" target="_blank" data-toggle="tooltip" title="Watch us on Youtube">
+				  <i class="fab fa-youtube fa-2x"></i>
+				  <span class="nav-link-inner--text d-lg-none">Youtube</span>
+				</a>
+			  </li>
+				<% end %>
+			  </ul>
+			  <ul class="navbar-nav ml-lg-auto">
 					<li class="nav-item dropdown">
 						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<i class="fas fa-2x fa-user-circle" style="size: 50px;"></i>
+							<i class="fas fa-2x fa-user" style="size: 50px;"></i>
 							<span class="nav-link-inner--text d-lg-none">Profile</span>
 						</a>
-						
 						<% if user_signed_in? %>
 							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
 								<%= link_to "My profile", edit_user_registration_path, class: "dropdown-item" %>
@@ -67,15 +88,16 @@
 							</div>
 						<% end %>
 					</li>
-					<li class="nav-item dropdown" style="margin-top: auto;margin-bottom: auto;">
-						<label class="custom-toggle" style="margin-top: auto;margin-bottom: auto;">
-							<input type="checkbox">
-							<span class="custom-toggle-slider rounded-circle"></span>
-						</label>
-					</li> 
 				</ul>
 			</div>
+		  </div>
 		</nav>
+	  </header>
+
+
+
+
+
 <%= yield %>
 		<footer>
 			<div class="row align-items-center justify-content-md-between">
@@ -101,10 +123,3 @@
 		</footer>
 	</body>
 </html>
-
-				
-				
-				
-
-
-
