add infos to back dashboard

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -11,3 +11,13 @@
                                           question_id :<%= q.id %> /
                                           content : <%= q.content %><br>
                                           <% end %>
+<br>
+<br>
+<br>
+<strong>PROFIL INFOS :</strong><br>
+<strong>My email : </strong> <%= @user.email %><br>
+<strong>My Company : </strong> <%= @user.company %><br>
+
+
+<h3>Ajouter ici lien pour edit profil</h3>
+<h3>Ajoiter lien pour edit password</h3>
