link in dashboard

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -19,4 +19,4 @@
 <strong>My Company : </strong> <%= @user.company %><br>
 
 
-<%= link_to 'Edit profil', edit_user_registration_path %><br>
+<%= link_to 'Edit profil / password', edit_user_registration_path %><br>
