--- a/app/views/static/_navbar_hp.html.erb
+++ b/app/views/static/_navbar_hp.html.erb
@@ -43,11 +43,13 @@
             </a>
             
             <% if user_signed_in? %>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-                <%= link_to "My profile", edit_user_registration_path, class: "dropdown-item" %>
-                <%= link_to "My surveys", surveys_path, class: "dropdown-item" %>
                 <% @dashboard = Dashboard.where(user_id: current_user) %>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+                <%= link_to "My surveys", surveys_path, class: "dropdown-item" %>
+                <% if current_user.surveys.exists? %>
 								<%= link_to 'Dashboard', dashboard_path(@dashboard.ids), class: "dropdown-item" %>
+                <% end %>
+                <%= link_to 'Edit profil', edit_user_registration_path, class: "dropdown-item" %>
                 <%= link_to "Disconnect", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
               </div>
             <% else %>
