--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,12 @@
+<!-- Call for the transparent partial navbar-->
+
+<% content_for :navbar do %>
+  <%= render :partial =>'static/navbar_hp'%>
+<% end %>
+
+<!-- end of navbar partial -->
+
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
