--- a/app/views/landings/show.html.erb
+++ b/app/views/landings/show.html.erb
@@ -1,9 +1,9 @@
 <p> Voici l'id de la landing : <%= @landing.id %> </p>
 <p> Voici le survey id associé à la landing : <%= @landing.survey_id %> </p>
 
-<%= @survey.title %>
+<strong>Title :</strong><%= @survey.title %><br>
 <% @survey.questions.each do |question| %>
-<%= question.content %>
+<%= question.content %><br>
 <% end %>
 
 <% @survey.answers.each do |answer| %>
