modif section amazing team

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -212,16 +212,18 @@
 
 <section id="the_team" class="section section-lg">
   <div class="container">
-    <div class="row justify-content-center text-center mb-lg">
+    <div class="row justify-content-center text-center">
       <div class="col-lg-8">
         <h2 class="display-3">The amazing Team</h2>
         <p class="lead text-muted">Here you'll discover the people you'll work with tomorrow ! </p>
       </div>
     </div>
+    
     <div class="row">
-      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+      <div class="col-md-6 col-lg-1 mb-5 mb-lg-0"></div>
+      <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNU6XT54L-655b5ead2e85-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNU6XT54L-655b5ead2e85-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Sacha Tordjman</span>
@@ -234,68 +236,73 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+
+      <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA2PP-64e10b10ab5b-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA2PP-64e10b10ab5b-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Tanguy Billon</span>
               <small class="h6 text-muted">Web Developer</small>
             </h5>
             <div class="mt-3">
-              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-primary btn-icon-only rounded-circle' %>
-              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-primary btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, 'https://www.linkedin.com', class:'btn btn-primary btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, 'https://github.com/Tanguy-tech', class:'btn btn-primary btn-icon-only rounded-circle' %>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+
+      <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN877SSD-ab750300fff8-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN877SSD-ab750300fff8-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Julien Ribeaucourt</span>
               <small class="h6 text-muted">Web Developer</small>
             </h5>
             <div class="mt-3">
-              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-info btn-icon-only rounded-circle' %>
-              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-info btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, 'https://www.linkedin.com', class:'btn btn-info btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, 'https://github.com/RibJulien', class:'btn btn-info btn-icon-only rounded-circle' %>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+
+
+      <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN87EX5X-acf9c0d8e3da-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN87EX5X-acf9c0d8e3da-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Augustin Bernard</span>
               <small class="h6 text-muted">Web developer</small>
             </h5>
             <div class="mt-3">
-              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-success btn-icon-only rounded-circle' %>
-              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-success btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, 'https://www.linkedin.com', class:'btn btn-success btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, 'https://github.com/jawohlito', class:'btn btn-success btn-icon-only rounded-circle' %>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+
+      <div class="col-md-6 col-lg-2 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA5UM-fe6009f3bb78-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA5UM-fe6009f3bb78-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 150px;">
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Baptiste Geffroy</span>
               <small class="h6 text-muted">Web Developer</small>
             </h5>
             <div class="mt-3">
-              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, '#', class:'btn btn-danger btn-icon-only rounded-circle' %>
-              <%= link_to '<i class="fab fa-github"></i>'.html_safe, '#', class:'btn btn-danger btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-linkedin-in"></i>'.html_safe, 'https://www.linkedin.com/in/baptiste-geffroy-48676314b/', class:'btn btn-danger btn-icon-only rounded-circle' %>
+              <%= link_to '<i class="fab fa-github"></i>'.html_safe, 'https://github.com/Baptiste-Gfy', class:'btn btn-danger btn-icon-only rounded-circle' %>
             </div>
           </div>
         </div>
       </div>
+      <div class="col-md-6 col-lg-1 mb-5 mb-lg-0"></div>
     </div>
-  </div>
 </section>
 
 <!-- Contact us -->
