removing https link

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -221,7 +221,7 @@
     <div class="row">
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNU6XT54L-655b5ead2e85-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
+          <%= image_tag "about_us/sacha_tordjman", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover", style: "width: 200px;" %>
           <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Sacha Tordjman</span>
@@ -236,8 +236,8 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA2PP-64e10b10ab5b-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-          <div class="pt-4 text-center">
+        <%= image_tag "about_us/tanguy_billon.png", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover", style: "width: 200px;" %>
+        <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Tanguy Billon</span>
               <small class="h6 text-muted">Web Developer</small>
@@ -251,8 +251,8 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN877SSD-ab750300fff8-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-          <div class="pt-4 text-center">
+        <%= image_tag "about_us/julien_ribeaucourt.jpg", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover", style: "width: 200px;" %>
+        <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Julien Ribeaucourt</span>
               <small class="h6 text-muted">Web Developer</small>
@@ -266,8 +266,8 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNN87EX5X-acf9c0d8e3da-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-          <div class="pt-4 text-center">
+        <%= image_tag "about_us/augustin_bernard.jpg", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover", style: "width: 200px;" %>
+        <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Augustin Bernard</span>
               <small class="h6 text-muted">Web developer</small>
@@ -281,8 +281,8 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="https://ca.slack-edge.com/T3W8B88JW-UNULNA5UM-fe6009f3bb78-512" class="rounded-circle img-center img-fluid shadow shadow-lg--hover" style="width: 200px;">
-          <div class="pt-4 text-center">
+        <%= image_tag "about_us/baptiste_geffroy.jpg", class: "rounded-circle img-center img-fluid shadow shadow-lg--hover", style: "width: 200px;" %>
+        <div class="pt-4 text-center">
             <h5 class="title">
               <span class="d-block mb-1">Baptiste Geffroy</span>
               <small class="h6 text-muted">Web Developer</small>
