modif section companie in home page

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -336,36 +336,26 @@
 						<div class="row justify-content-center">
 							
 							<div class="col-lg-2 col-4">
-								<%= image_tag "theOz.jpg", class: "img-fluid", style: "width: 200px;" %>
+								<%= image_tag "theOz.jpg", class: "img-fluid-companie", style: "width: 200px;" %>
 							</div>
 							
 							<div class="col-lg-2 col-4">
-								<a href=" https://www.creative-tim.com/product/vue-argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Vue.js - The progressive javascript framework">
-									<img src="https://www.soprasteria.fr/images/librariesprovider2/sopra-steria-fr-images/logo-home/logo-sopra-steria.png">
-								</a>
+								<%= image_tag "inceco.png", class: "img-fluid-companie", style: "width: 200px;" %>
 							</div>
 							
 							<div class="col-lg-2 col-4">
-								<a href=" https://www.creative-tim.com/product/argon-design-system-angular" target="_blank" data-toggle="tooltip" data-original-title="Angular - One framework. Mobile &amp; desktop">
-									<img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/angular.jpg" class="img-fluid">
-								</a>
+								<%= image_tag "CSR.png", class: "img-fluid-companie", style: "width: 200px;" %>
 							</div>
 							
 							<div class="col-lg-2 col-4">
-								<a href=" https://www.creative-tim.com/product/argon-design-system-react" target="_blank" data-toggle="tooltip" data-original-title="React - A JavaScript library for building user interfaces">
-									<img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/react.jpg" class="img-fluid">
-								</a>
+								<%= image_tag "agatheconseil.jpeg", class: "img-fluid-companie", style: "width: 200px;" %>
 							</div>
 							
 							<div class="col-lg-2 col-4">
-								<a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Sketch - Digital design toolkit">
-									<img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/sketch.jpg" class="img-fluid">
-								</a>
+								<%= image_tag "auditacces.png", class: "img-fluid-companie", style: "width: 200px;" %>
 							</div>
 							<div class="col-lg-2 col-4">
-								<a href=" https://www.creative-tim.com/product/argon-design-system" target="_blank" data-toggle="tooltip" data-original-title="Adobe Photoshop - Software for digital images manipulation">
-									<img src="https://s3.amazonaws.com/creativetim_bucket/tim_static_images/presentation-page/ps.jpg" class="img-fluid">
-								</a>
+								<%= image_tag "digital&you.jpeg", class: "img-fluid-companie", style: "width: 200px;" %>
 							</div>
 						</div>
 					</div>
