push de la version sans link http de la homepage

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -38,10 +38,10 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img class="img-fluid" src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80">
+                      <%= image_tag "home_pics/pic1homepage.jpg", class: "img-fluid" %>
                       </div>
                       <div class="carousel-item">
-                        <img class="img-fluid" src="https://images.unsplash.com/photo-1427751840561-9852520f8ce8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1955&q=80" alt="Second slide">
+                      <%= image_tag "home_pics/pic2homepage.jpg", class: "img-fluid", alt: "Second slide" %>
                       </div>
                     </div>
                     <a class="carousel-control-prev" href="#carousel_example" role="button" data-slide="prev">
@@ -76,7 +76,7 @@
   <div class="container">
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="https://demos.creative-tim.com/argon-design-system/assets/img/theme/promo-1.png" class="img-fluid floating">
+      <%= image_tag "home_pics/floating_pages.png", class: "img-fluid floating" %>
       </div>
       <div class="col-md-6 order-md-1">
         <div class="pr-md-5">
@@ -149,7 +149,7 @@
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-lg-2 ml-lg-auto">
         <div class="position-relative pl-md-5">
-          <img src="https://demos.creative-tim.com/argon-design-system/assets/img/ill/ill-2.svg" class="img-center img-fluid">
+        <%= image_tag "home_pics/pullvert_pantalonlavande.svg", class: "img-center img-fluid" %>
         </div>
       </div>
       <div class="col-lg-6 order-lg-1">
