--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,12 @@
+ <!-- Call for the transparent partial navbar-->
+
+<% content_for :navbar do %>
+  <%= render :partial =>'static/navbar_hp'%>
+<% end %>
+
+<!-- end of navbar partial -->
+
+
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <%= f.hidden_field :reset_password_token %>
