standardization of pages

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -19,7 +19,7 @@
 			<%= f.text_area :message, placeholder: 'Type a message...', class: 'form-control form-control-alternative' %>
 		</div>
 		<div>
-			<%= f.submit 'Send', class: 'btn btn-default btn-round btn-block btn-lg'%>
+			<%= f.submit 'Send', class: 'btn btn-primary btn-round btn-block btn-lg'%>
 		</div>
 		<% end %>
 	</div>
