--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,3 +1,11 @@
+ <!-- Call for the transparent partial navbar-->
+
+<% content_for :navbar do %>
+  <%= render :partial =>'static/navbar_hp'%>
+<% end %>
+
+<!-- end of navbar partial -->
+
 <section class="section section-shaped section-lg">
       <div class="shape shape-style-1 bg-gradient-default">
         <span></span>
