--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 		    <%= yield(:navbar) %>
 		<% else %>
 			<header class="header-global">
-			    <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-default">
+			    <nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-primary">
 			      <div class="container">
 			        <%= link_to "Satis'faction", root_path, class:'navbar-brand' %>
 			        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
