--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -649,6 +649,12 @@ mark,
     height: auto;
 }
 
+.img-fluid-companie
+{
+    max-width: 100%;
+    height: 100%;
+}
+
 .img-thumbnail
 {
     max-width: 100%;
